@@ -37,7 +37,14 @@
 [4, 4, 262205]
 [2, 2, [5, 3; 0, 1]]
 6
-0.99197791640852265169404803750682485965 + 0.1264112865127400184730959576238
+18
+9
+9
+9
+  ***   at top-level: bnrclassno(bnf,[7,Ve
+  ***                 ^--------------------
+  *** bnrclassno: incorrect type in Idealstar [incorrect archimedean component] (t_VECSMALL).
+0.99197791640852265169404803750682485966 + 0.1264112865127400184730959576238
 0269655*I
 1
 [[1, 0; 0, 1], [0, 0]]
@@ -62,4 +69,4 @@
 0
 0
 [2, 2, 5]
-Total time spent: 32
+Total time spent: 40
